--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button Content="Generate Dummy Data" HorizontalAlignment="Left" VerticalAlignment="Top" Width="151" Margin="641,0,0,0" IsCancel="True" Click="Button_Click_2"/>
+        <Button Content="TestWCF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="10,5,0,0" Click="Button_Click"/>
 
     </Grid>
 </Window>
