--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -9,6 +9,11 @@
     <Grid>
         <Button Content="Generate Dummy Data" HorizontalAlignment="Left" VerticalAlignment="Top" Width="151" Margin="641,0,0,0" IsCancel="True" Click="Button_Click_2"/>
         <Button Content="TestWCF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="10,5,0,0" Click="Button_Click"/>
+        <DataGrid Name="shipmentListGrid" HorizontalAlignment="Left" Height="291" VerticalAlignment="Top" Width="772" Margin="10,63,0,0"
+                ScrollViewer.CanContentScroll="True" 
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto">
+        </DataGrid>
 
     </Grid>
 </Window>
